Working login logout

--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -7,10 +7,10 @@
 <ion-content padding>
   <ion-list>
 
-    <ion-item (click)="login()">
+    <!-- <ion-item (click)="login()">
       <ion-icon name='log-in' item-start></ion-icon>
       Login
-    </ion-item>
+    </ion-item> -->
     
     <ion-item (click)="debug()">
       <ion-icon name='person' item-start></ion-icon>
