Added my vehicles

--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -17,6 +17,12 @@
       Personal Details
     </ion-item>
     
+    
+    <ion-item [routerLink]="['/account', 'my-vehicles']">
+      <ion-icon name='car' item-start></ion-icon>
+      My Vehicles
+    </ion-item>
+    
     <ion-item>
       <ion-icon name='notifications' item-start></ion-icon>
       Notifications
