--- a/src/app/auth-callback/auth-callback.component.html
+++ b/src/app/auth-callback/auth-callback.component.html
@@ -1,3 +1,10 @@
-<p>
-  auth-callback works!
-</p>
+<ion-header>
+    <ion-toolbar>
+      <ion-title>Loading...</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+    <ion-spinner></ion-spinner>
+    </ion-content>
+  
