--- a/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
+++ b/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
@@ -7,7 +7,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="outer-content">
+<ion-content>
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="navToNewVehicle()">
