--- a/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
+++ b/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
@@ -26,8 +26,8 @@
         <img src="assets/images/car.png">
       </ion-avatar>
       <ion-label>
-        <h2>{{v?.make}} {{v?.model}}</h2>
-        <h3>{{v.registration}} - {{v?.year}}</h3>
+        <h2>{{v?.colour}} {{v?.make}} {{v?.model}}</h2>
+        <h3>{{v.registration}} - {{v?.fuelType}}</h3>
         <!-- <p>Listen, I've had a pretty messed up day...</p> -->
       </ion-label>
     </ion-item>
