Updated accountServer link

--- a/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
+++ b/src/app/account/my-vehicles/my-vehicles/my-vehicles.page.html
@@ -32,7 +32,7 @@
     </ion-item>
   </ion-list> -->
 
-  <ion-card *ngFor="let v of vehicles">
+  <ion-card *ngFor="let v of vehicles" (click)="navToVehicle(v.registration)">
 
     <ion-card-content>
 
