Added link to privacy policy from the account page

--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -34,6 +34,11 @@
       Marketing Preferences
     </ion-item>
     
+    <ion-item routerLink="/privacy">
+      <ion-icon name='lock' item-start ></ion-icon>
+      Privacy Policy
+    </ion-item>
+    
     <ion-item (click)="logout()">
       <ion-icon name='log-out' item-start></ion-icon>
       Logout
